Fixing the modal issues on IE11

--- a/wp-content/themes/standard-industries/styles/components/_modal.scss
+++ b/wp-content/themes/standard-industries/styles/components/_modal.scss
@@ -15,7 +15,7 @@
     top: 0;
     visibility: hidden;
     width: 100vw;
-    z-index: 1;
+    z-index: 2;
 
     &--open {
       visibility: visible;
