--- a/wp-content/themes/standard-industries/styles/global/_nav.scss
+++ b/wp-content/themes/standard-industries/styles/global/_nav.scss
@@ -165,6 +165,7 @@
       top: $header-height-lg;
       transition: background-color 100ms linear;
       width: 100%;
+      z-index: 2;
     }
 
     &__inner {
